--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -37,6 +37,9 @@
 
     .main-nav__link {
       transform: scale(1);
+      font-weight: 500;
+      font-size: 28px;
+      line-height: 28px;
     }
   }
 }
@@ -54,11 +57,6 @@
   }
 }
 
-.main-nav__list--opened .main-nav__link {
-  font-weight: 500;
-  font-size: 28px;
-  line-height: 28px;
-}
 
 .main-nav__link {
   position: relative;
@@ -80,9 +78,11 @@
   width: 7px;
   height: 7px;
   display: block;
-  position: relative;
-  margin: -1px 0 0 2px;
+  position: absolute;
+  right: -9px;
+  top: -1px;
   background-image: url("../img/svg/arrow.svg");
+  transition: all 1s ease;
 }
 
 .main-nav__link--markedOnlyOnDesktop::after {
